--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,10 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+clock = "*"
+click = "*"
+requests = "*"
+assault = {path = "."}
 
 [dev-packages]
 twine = "*"
